desktop-themes/BlueMenta/gtk-3.0/gtk-widgets-borders.css
/* ... */
/* primary toolbar - focused element borders */
toolbar.primary-toolbar button:active:focus,
toolbar.primary-toolbar entry:focus,
toolbar.primary-toolbar combobox entry entry:focus,
toolbar.primary-toolbar button.raised.default:checked,
toolbar.primary-toolbar .raised button.default:checked,
toolbar.inline-toolbar button.default:checked,
toolbar.primary-toolbar button.raised.default:active,
toolbar.primary-toolbar raised button.default:active,
toolbar.inline-toolbar button.default:active,
.primary-toolbar .button:active:focus,
.primary-toolbar .entry:focus,
.primary-toolbar GtkComboBox.combobox-entry .entry:focus,
.primary-toolbar .button.raised.default:checked,
.primary-toolbar .raised .button.default:checked,
.inline-toolbar.toolbar .button.default:checked,
.primary-toolbar .button.raised.default:active,
.primary-toolbar .raised .button.default:active,
.inline-toolbar.toolbar .button.default:active {
	/*border-image: url("borders/primary-toolbar-generic-border-focused.png") 4 / 4px stretch;*/
	border-image: url("borders/button-active-focus.png") 3 3 4 3 / 3px 3px 4px 3px stretch;
	border-radius: 3px;
	border-width: 2px;
	border-style: solid;
	border-color: transparent;
}

/* primary toolbar - generic button borders */
toolbar.primary-toolbar button.raised,
toolbar.primary-toolbar .raised button,
toolbar.inline-toolbar button,
toolbar.primary-toolbar combobox button,
.primary-toolbar .button.raised,
.primary-toolbar .raised .button,
.inline-toolbar.toolbar .button,
.primary-toolbar GtkComboBox .button {
	border-image: url("borders/button.png") 3 3 4 3 / 3px 3px 4px 3px stretch;
	border-radius: 4px;
	border-width: 2px;
	border-style: solid;
	border-color: transparent;
}

/* primary toolbar - focused button borders */
toolbar.primary-toolbar button.raised.default,
toolbar.primary-toolbar .raised button.default,
toolbar.inline-toolbar button.default,
.primary-toolbar .button.raised.default,
.primary-toolbar .raised .button.default,
.inline-toolbar.toolbar .button.default {
	border-image: url("borders/button-focus.png") 3 3 4 3 / 3px 3px 4px 3px stretch;
	border-radius: 4px;
	border-width: 2px;
	border-style: solid;
	border-color: transparent;
}

/* column-headers borders */
treeview header button,
treeview header button:active,
treeview header button:active:hover,
treeview header button:checked,
treeview header button:checked:hover,
treeview header button:disabled,
column-header.button,
column-header .button,
column-header.button:active,
column-header .button:active,
column-header.button:active:hover,
column-header .button:active:hover,
column-header.button:checked,
column-header .button:checked,
column-header.button:checked:hover,
column-header .button:checked:hover,
column-header.button:disabled,
column-header .button:disabled {
	border-width: 0 1px 1px 0;
	border-radius: 0;
	border-style: solid;
	border-color: transparent;
}

treeview header button,
treeview header button:active,
treeview header button:active:hover,
treeview header button:checked,
treeview header button:checked:hover,
treeview header button.dnd,
column-header.button,
column-header .button,
column-header.button:active,
column-header .button:active,
column-header.button:active:hover,
column-header .button:active:hover,
column-header.button:checked,
column-header .button:checked,
column-header.button:checked:hover,
column-header .button:checked:hover,
column-header .button.dnd {
	border-image: linear-gradient(to top,
		alpha(@theme_base_color, 0.0),
		shade(@borders, 1.0)) 0 1 1 0;
}

/* ie. yumex-dnf */
stack treeview header button,
GtkStack column-header .button {
    border-width: 0px 1px 1px 0px;
	border-color: transparent;
    border-style: solid;
	border-image: linear-gradient(to bottom,
		alpha(@borders, 0.0),
		shade(@borders, 1.0)) 0 1 1 0;
}

treeview header button:disabled,
column-header.button:disabled,
column-header .button:disabled {
	border-image: linear-gradient(to top,
		alpha(@theme_base_color, 0.0),
		@insensitive_bg_color) 0 1 1 0;
}

treeview header button:last-child,
treeview header button:active:last-child,
treeview header button:active:hover:last-child,
treeview header button:checked:last-child,
treeview header button:checked:hover:last-child,
column-header.button:last-child,
column-header:last-child .button,
column-header.button:last-child:active,
column-header:last-child .button:active,
column-header.button:last-child:active:hover,
column-header:last-child .button:active:hover,
column-header.button:last-child:checked,
column-header:last-child .button:checked,
column-header.button:last-child:checked:hover,
column-header:last-child .button:checked:hover {
	border-right-width: 0;
}

treeview header button:focus
column-header.button:focus,
column-header .button:focus {
	border-image: linear-gradient(to top,
		alpha(@theme_base_color, 0.0),
		shade(@borders, 1.0)) 0 1 1 0;
	border-width: 0 1px 1px 0;
	border-radius: 0;
}

/* pushed colored buttons borders */
toolbar.selection-mode button.suggested-action,
toolbar.selection-mode GtkToolButton.suggested-action button,
.selection-mode.toolbar .suggested-action.button,
.selection-mode.toolbar GtkToolButton.suggested-action .button {
	border-image: url("borders/button-focus.png") 3 3 4 3 / 3px 3px 4px 3px stretch;
	border-radius: 3px;
	border-width: 0px 0px 2px 0px;
	border-style: solid;
	border-color: transparent;

}

/* suggested action buttons borders */
button.suggested-action,
button.suggested-action:checked,
button.suggested-action:active,
.suggested-action.button,
.suggested-action.button:checked,
.suggested-action.button:active {
	border-image: url("borders/button-focus.png") 3 3 4 3 / 3px 3px 4px 3px stretch;
	border-radius: 3px;
	border-width: 2px;
	border-style: solid;
	border-color: transparent;
	/* Zuki note: figure out the heck it does */
}
/* ... */

